# marchingtetrahedra-reconstruction

./: .gitignore  CMakeLists.txt  README.md  draw.cpp  graph.h  kdtree.cpp  kdtree.hpp  las2txt.py  main.cpp  marching_tets.cpp  marching_tets.h  mynotes.txt  normals.h  notes.txt  recon_utils.cpp  recon_utils.h  reconstruction.h  tests.cpp  tests.h  utils.cpp  utils.h
data/: fx.raw  normals_bun270-n=31701.txt  vertices_bun270_n=31701.txt
utilities/: README.md  convert.py  data-utils.py  requirements.txt
